fix: implement correct shift and caps lock keys handler

--- a/virtual-keyboard/src/assets/css/style.css
+++ b/virtual-keyboard/src/assets/css/style.css
@@ -75,8 +75,7 @@
   cursor: pointer;
 }
 
-.key.active,
-.key:active {
+.key.active {
   background-color: rgb(193, 192, 253, 0.9);
   box-shadow: inset 0 0 3px 1px var(--black-color);
 }
@@ -111,6 +110,8 @@
 .arrow-up,
 .arrow-down {
   flex: 40px;
+
+  font-size: 30px;
 }
 
 .control-left,
